[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Tours/PlaceurDeTourZone.gd" type="Script" id=1]
[ext_resource path="res://Ressources/Asset/Tours/tower test 3.png" type="Texture" id=2]
[ext_resource path="res://Ressources/Asset/Tours/lazer.png" type="Texture" id=3]
[ext_resource path="res://Ressources/Asset/Tours/carre-gris-fond-transparent.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 855.583

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0.408356, 0 )
scale = Vector2( 0.1, 0.1 )
shape = SubResource( 1 )

[node name="towerTest1" type="Sprite" parent="."]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="towerTest1"]
scale = Vector2( 7.03601, 2.81175 )
texture = ExtResource( 3 )
vframes = 11

[node name="carre-gris-fond-transparent" type="Sprite" parent="towerTest1/Sprite"]
position = Vector2( 0.835552, 1.10641 )
scale = Vector2( 0.0487215, 0.0756446 )
texture = ExtResource( 4 )

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
